added UI error/winner dialog box

--- a/index.html
+++ b/index.html
@@ -72,6 +72,24 @@
     <!-- Right-hand navigation bar goes here -->
     <div id="right-column">
 
+      <!-- Modal Stroke Error Confirmation Box -->
+      <div id="myModal" class="modal">
+
+        <!-- Modal content -->
+        <div class="modal-content">
+          <span class="close">&times;</span>
+          <p>How Did the Point End?</p>
+          <div id="point_end_options_container" class="shot_ending_type">
+            <div id="forced_error_btn" class="shot_ending_type">Forced Error</div>
+            <div id="unforced_error_btn" class="shot_ending_type">Unforced Error</div>
+            <div id="ace_btn" class="shot_ending_type">Ace</div>
+            <div id="winner_btn" class="shot_ending_type">Winner</div>
+
+          </div>
+        </div>
+
+      </div>
+
       <!-- Scores -->
       <div class="score_menu_container" id="score_menu">
         <div class="score_column_container">
