End game (TODO: View ended games in history)

--- a/index.html
+++ b/index.html
@@ -357,5 +357,23 @@
     </div>
   </div>
 
+  <!-- Modal for Ending the Current Match -->
+  <div id="end-match-modal" class="modal">
+    <div class="modal-content">
+      <div class="modal-content-header">
+         <div>Do you want to end <span class="current-player-name"></span>'s match?</div>
+         <div class="close">&times;</div>
+      </div>
+      <div class="modal-row plain-text">
+        You can't log additional stats once you end this match, but
+        you can still view stats and write feedback in 'History'.
+      </div>
+      <div class="modal-row">
+        <div class="modal-cancel">Cancel</div>
+        <div class="modal-submit">End Game</div>
+      </div>
+    </div>
+  </div>
+
 </body>
 </html>
