--- a/index.html
+++ b/index.html
@@ -16,9 +16,14 @@
   <div id="topbar">
     <div id="topbar-logo">Tennis Buddy</div>
     <div id="topbar-options">
-      <div id="menu-stats" class="menu-item-wrapper">
-        <div class="menu-item" id = "view-stats-btn">Stats</div>
+      <div id="menu-tabs">
+        <input id="tab-logger" type="radio" name="tabs" checked>
+        <label for="tab-logger">Logger</label>
+        
+        <input id="tab-stats" type="radio" name="tabs">
+        <label for="tab-stats">Stats</label>
       </div>
+
       <div id="menu-menu" class="menu-item-wrapper">
         <div class="menu-item">
           <img src="./graphics/menu-icon.png" alt="Menu">
