Create history view

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <div id="menu-tabs">
         <input id="tab-logger" type="radio" name="tabs" checked>
         <label for="tab-logger">Logger</label>
-        
+
         <input id="tab-stats" type="radio" name="tabs">
         <label for="tab-stats">Stats</label>
       </div>
@@ -210,7 +210,25 @@
   <!-- /Stats Popup -->
 
 
-
+  <!-- History Popup -->
+  <div id="menu-popup-history" class="menu-popup">
+    <div class="history-menu-container">
+      <div class="history-table-header">History</div>
+      <table class="history-table">
+        <tr>
+          <td>April 15</td>
+          <td>1pm</td>
+          <td>Steve vs. Jim</td>
+        </tr>
+        <tr>
+          <td>April 15</td>
+          <td>2pm</td>
+          <td>John vs. Andrew</td>
+        </tr>
+      </table>
+    </div>
+  </div>
+  <!-- /History Popup -->
 
 
   <!--------- PLAYER VIEW --------->
