Archive ended games

--- a/index.html
+++ b/index.html
@@ -215,16 +215,9 @@
     <div class="history-menu-container">
       <div class="history-table-header">History</div>
       <table class="history-table">
-        <tr>
-          <td>April 15</td>
-          <td>1pm</td>
-          <td>Steve vs. Jim</td>
-        </tr>
-        <tr>
-          <td>April 15</td>
-          <td>2pm</td>
-          <td>John vs. Andrew</td>
-        </tr>
+        <tr class="history-table-empty"><td>
+          No match to show. Current matches will appear here once they are ended.
+        </td></tr>
       </table>
     </div>
   </div>
