Menu dropdown view for when there's no current match

--- a/index.html
+++ b/index.html
@@ -33,10 +33,8 @@
             <div id="new-match" class="menu-item">New Match</div>
             <div id="current-matches" class="menu-item-wrapper">
               <div class="menu-item">Current Matches</div>
-              <div id="current-matches-list" class="menu-dropdown">
-                <div class="menu-item">Steve</div>
-                <div class="menu-item">John</div>
-              </div>
+              <div id="current-matches-empty">No match in progress</div>
+              <div id="current-matches-list" class="menu-dropdown"></div>
             </div>
             <div id="history" class="menu-item">History</div>
             <div id="end-match" class="menu-item">End Current Match</div>
