added unspecified as shot option to display. New stats court with new pin icons

--- a/index.html
+++ b/index.html
@@ -181,9 +181,18 @@
               <img src="graphics/slice_icon.png" class="stats_icon">
               <div id="slice_stat"> 7%</div>
           </div>
+
+          <div class="stats_menu_table_row">
+              <img src="graphics/green-pin.png" class="shot-pin-display">
+
+              <div class="stats_stroke_name">Unspecified</div>
+              <img src="graphics/unspecified_icon.png" class="stats_icon">
+              <div id="unspecified_stat"> 7%</div>
+          </div>
+          
         </div>
         <div class = "stats_menu_col">
-            <img src="graphics/tennis-court-stats3.png" class="court_stats_icon">
+            <img src="graphics/tennis-court-stats4.png" class="court_stats_icon">
             <div id="tennis_stats_court">
               <img src="graphics/blue-pin.png" class="shot-pin">
             </div>
@@ -280,10 +289,21 @@
               <img src="graphics/slice_icon.png" class="stats_icon">
               <div id="slice_stat"> 7%</div>
           </div>
+
+          <div class="stats_menu_table_row">
+              <img src="graphics/green-pin.png" class="shot-pin-display">
+
+              <div class="stats_stroke_name">Unspecified</div>
+              <img src="graphics/unspecified_icon.png" class="stats_icon">
+              <div id="unspecified_stat"> 7%</div>
+          </div>
+
         </div>
         <div class = "stats_menu_col">
-            <img src="graphics/tennis-court-stats2.png" class="court_stats_icon">
+            <img src="graphics/tennis-court-stats4.png" class="court_stats_icon">
+
             <div id="tennis_stats_court">
+
               <img src="graphics/blue-pin.png" class="shot-pin">
             </div>
         </div>
