added toggling to stats page

--- a/index.html
+++ b/index.html
@@ -204,7 +204,9 @@
         <div id="court-view-text">Player Court Positions</div>
         <button class="toggle_stats_btn" id="toggle_stats_btn">Toggle View</button>
       </div>-->
-
+      <div class="toggle_stats_container">
+        <button id="toggle_stats_btn">Toggle</button>
+      </div>
       <div class="feedback_menu_container" id="feedback_menu">
         <div class="feedback_menu_header_container">
           Feedback for <span id="feedback_player">Player</span>:
