Player view: Show actual stats and feedback

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
             <img src="graphics/blue-pin.png" class="shot-pin-display">
             <div class="stats_stroke_name">Forehands</div>
             <img src="graphics/forehand_icon.png" class="stats_icon">
-            <div id="forehand_stat">35%</div>
+            <div class="forehand_stat">35%</div>
           </div>
 
           <div class="stats_menu_table_row">
@@ -163,7 +163,7 @@
 
               <div class="stats_stroke_name">Backhands</div>
               <img src="graphics/backhand_icon.png" class="stats_icon">
-              <div id="backhand_stat">50%</div>
+              <div class="backhand_stat">50%</div>
           </div>
 
           <div class="stats_menu_table_row">
@@ -171,7 +171,7 @@
 
               <div class="stats_stroke_name">Volleys</div>
               <img src="graphics/volley_icon.png" class="stats_icon">
-              <div id="volley_stat"> 8%</div>
+              <div class="volley_stat"> 8%</div>
           </div>
 
           <div class="stats_menu_table_row">
@@ -179,7 +179,7 @@
 
               <div class="stats_stroke_name">Slices</div>
               <img src="graphics/slice_icon.png" class="stats_icon">
-              <div id="slice_stat"> 7%</div>
+              <div class="slice_stat"> 7%</div>
           </div>
 
           <div class="stats_menu_table_row">
@@ -187,9 +187,9 @@
 
               <div class="stats_stroke_name">Unspecified</div>
               <img src="graphics/unspecified_icon.png" class="stats_icon">
-              <div id="unspecified_stat"> 7%</div>
+              <div class="unspecified_stat"> 7%</div>
           </div>
-          
+
         </div>
         <div class = "stats_menu_col">
             <img src="graphics/tennis-court-stats4.png" class="court_stats_icon">
@@ -256,14 +256,14 @@
     <div>
       <div class="stats_menu_table_container">
         <div class = "stats_menu_col" id = "stats-summary">
-          <div class="stats_menu_table_header">Your Recent Match</div>
-          <div class="stats_menu_table_subheader">April 20, 10am</div>
+          <div class="stats_menu_table_header">Match Statistics</div>
+          <!-- <div class="stats_menu_table_subheader">April 20, 10am</div> -->
 
           <div class="stats_menu_table_row">
             <img src="graphics/blue-pin.png" class="shot-pin-display">
             <div class="stats_stroke_name">Forehands</div>
             <img src="graphics/forehand_icon.png" class="stats_icon">
-            <div id="forehand_stat">35%</div>
+            <div class="forehand_stat">35%</div>
           </div>
 
           <div class="stats_menu_table_row">
@@ -271,7 +271,7 @@
 
               <div class="stats_stroke_name">Backhands</div>
               <img src="graphics/backhand_icon.png" class="stats_icon">
-              <div id="backhand_stat">50%</div>
+              <div class="backhand_stat">50%</div>
           </div>
 
           <div class="stats_menu_table_row">
@@ -279,7 +279,7 @@
 
               <div class="stats_stroke_name">Volleys</div>
               <img src="graphics/volley_icon.png" class="stats_icon">
-              <div id="volley_stat"> 8%</div>
+              <div class="volley_stat"> 8%</div>
           </div>
 
           <div class="stats_menu_table_row">
@@ -287,7 +287,7 @@
 
               <div class="stats_stroke_name">Slices</div>
               <img src="graphics/slice_icon.png" class="stats_icon">
-              <div id="slice_stat"> 7%</div>
+              <div class="slice_stat"> 7%</div>
           </div>
 
           <div class="stats_menu_table_row">
@@ -295,14 +295,14 @@
 
               <div class="stats_stroke_name">Unspecified</div>
               <img src="graphics/unspecified_icon.png" class="stats_icon">
-              <div id="unspecified_stat"> 7%</div>
+              <div class="unspecified_stat"> 7%</div>
           </div>
 
         </div>
         <div class = "stats_menu_col">
             <img src="graphics/tennis-court-stats4.png" class="court_stats_icon">
 
-            <div id="tennis_stats_court">
+            <div id="tennis_player_stats_court">
 
               <img src="graphics/blue-pin.png" class="shot-pin">
             </div>
@@ -310,12 +310,7 @@
       </div>
 
       <div class="feedback_viewer_container">
-        <div class="feedback_viewer_header_container">
-          Feedback from Coach:
-        </div>
-        <div class="feedback_viewer_text_container">
-          Work on your forehands!
-        </div>
+        <div class="feedback_viewer_header_container"></div>
       </div>
     </div>
   </div>
