Make current maches into a popup

--- a/index.html
+++ b/index.html
@@ -410,5 +410,19 @@
     </div>
   </div>
 
+  <!-- Modal for all the current matches -->
+  <div id="all-current-matches-modal" class="modal">
+    <div class="modal-content">
+      <div class="modal-content-header">
+         <div>Matches in Progress</div>
+         <div class="close">&times;</div>
+      </div>
+      <div class="modal-row">
+        <table>
+        </table>
+      </div>
+    </div>
+  </div>
+
 </body>
 </html>
