Current match popup (too many matches); Move end match button

--- a/index.html
+++ b/index.html
@@ -37,7 +37,6 @@
               <div id="current-matches-list" class="menu-dropdown"></div>
             </div>
             <div id="history" class="menu-item">History</div>
-            <div id="end-match" class="menu-item">End Current Match</div>
             <div class="menu-item logout">Log Out</div>
           </div>
         </div>
@@ -74,6 +73,7 @@
 
     <!-- Right-hand navigation bar goes here -->
     <div id="right-column">
+      <div id="end-match">End This Match</div>
       <!-- Scores -->
       <div class="score_menu_container" id="score_menu">
         <div class="score_column_container">
