added new icons for shot type

--- a/index.html
+++ b/index.html
@@ -355,10 +355,23 @@
          <div class="close" id="shot_modal_close">&times;</div>
       </div>
       <div id="point_end_options_container">
-        <div id="forced_error_btn" class="shot_ending_type">Forced Error</div>
-        <div id="unforced_error_btn" class="shot_ending_type">Unforced Error</div>
-        <div id="ace_btn" class="shot_ending_type">Ace</div>
-        <div id="winner_btn" class="shot_ending_type">Winner</div>
+        <div id="forced_error_btn" class="shot_ending_type">
+          <div>Forced Error</div>
+          <img src = "./graphics/forced_error.png" class="point_icon">
+        </div>
+        <div id="unforced_error_btn" class="shot_ending_type">
+          <div>Unforced Error</div>
+          <img src = "./graphics/unforced_error.png" class="point_icon">
+        </div>
+        <div id="ace_btn" class="shot_ending_type">
+          <div>Ace</div>
+          <img src = "./graphics/ace.png" class="point_icon">
+        </div>
+        <div id="winner_btn" class="shot_ending_type">
+          <div>Winner</div>
+          <img src = "./graphics/winner.png" class="point_icon">
+
+        </div>
 
       </div>
     </div>
