Added unspecified button and initialize it to be selected at login

--- a/index.html
+++ b/index.html
@@ -136,6 +136,7 @@
   	    <input type="button" class="toolbar-button borderless" id="backhand-button" value="(B)ackhand">
         <input type="button" class="toolbar-button borderless" id="volley-button" value="(V)olley">
         <input type="button" class="toolbar-button borderless" id="slice-button" value="(S)lice">
+        <input type="button" class="toolbar-button borderless" id="unspecified-button" value="(U)nspecified">
         <div id="menu-undo">Undo Shot</div>
       </div>
       <!-- /Logging Toolbar -->
