Fixed winner/error modal styling.

--- a/index.html
+++ b/index.html
@@ -352,28 +352,26 @@
     <!-- Modal content -->
     <div class="modal-content">
       <div class="modal-content-header">
-         <div>How Did the Point End?</div>
-         <div class="close" id="shot_modal_close">&times;</div>
+        <div>How Did the Point End?</div>
+        <div class="close" id="shot_modal_close">&times;</div>
       </div>
       <div id="point_end_options_container">
-        <div id="forced_error_btn" class="shot_ending_type">
-          <div>Forced Error</div>
+        <div class="point_end_btn_container">
           <img src = "./graphics/forced_error.png" class="point_icon">
+          <div id="forced_error_btn" class="shot_ending_type">Forced Error</div>
         </div>
-        <div id="unforced_error_btn" class="shot_ending_type">
-          <div>Unforced Error</div>
+        <div class="point_end_btn_container">
           <img src = "./graphics/unforced_error.png" class="point_icon">
+          <div id="unforced_error_btn" class="shot_ending_type">Unforced Error</div>
         </div>
-        <div id="ace_btn" class="shot_ending_type">
-          <div>Ace</div>
+        <div class="point_end_btn_container">
           <img src = "./graphics/ace.png" class="point_icon">
+          <div id="ace_btn" class="shot_ending_type">Ace</div>
         </div>
-        <div id="winner_btn" class="shot_ending_type">
-          <div>Winner</div>
+        <div class="point_end_btn_container">
           <img src = "./graphics/winner.png" class="point_icon">
-
+          <div id="winner_btn" class="shot_ending_type">Winner</div>
         </div>
-
       </div>
     </div>
   </div>
