Fixed stats toggling, added it to past match viewing and player view as well.

--- a/index.html
+++ b/index.html
@@ -206,7 +206,8 @@
         <button class="toggle_stats_btn" id="toggle_stats_btn">Toggle View</button>
       </div>-->
       <div class="toggle_stats_container">
-        <button id="toggle_stats_btn">Toggle</button>
+  	    <input type="button" class="stats-toggle-button borderless" id="coach-player-position-button" value="View Player Position">
+  	    <input type="button" class="stats-toggle-button borderless" id="coach-shot-position-button" value="View Shot Placement">
       </div>
       <div class="feedback_menu_container" id="feedback_menu">
         <div class="feedback_menu_header_container">
@@ -312,6 +313,11 @@
         </div>
       </div>
 
+      <div class="toggle_stats_container">
+  	    <input type="button" class="stats-toggle-button borderless" id="player-player-position-button" value="View Player Position">
+  	    <input type="button" class="stats-toggle-button borderless" id="player-shot-position-button" value="View Shot Placement">
+      </div>
+      
       <div class="feedback_viewer_container">
         <div class="feedback_viewer_header_container"></div>
       </div>
