In the middle of implementing window resizing, still need to look at modals.

--- a/index.html
+++ b/index.html
@@ -73,63 +73,65 @@
 
     <!-- Right-hand navigation bar goes here -->
     <div id="right-column">
-      <div id="end-match">End This Match</div>
-      <!-- Scores -->
-      <div class="score_menu_container" id="score_menu">
-        <div class="score_column_container">
-          <div class="score_column" id="score_column_player1">
+      <div id="top-right-column">
+        <div id="end-match">End This Match</div>
+        <!-- Scores -->
+        <div class="score_menu_container" id="score_menu">
+          <div class="score_column_container">
+            <div class="score_column" id="score_column_player1">
 
-            <div class="set_score_box">
-              <div class="score_player_label">Steve</div>
-            </div>
-
-            <!--
-            <div class="set_score_box">
-              <div class="set_score_displayed">3</div>
-            </div>
-
-            <div class="set_score_box">
-              <div class="set_score_displayed">6</div>
-            </div>
-            -->
-
-            <div class="score_controller_container">
-              <div class = "score_num" id ="score_p1">0</div>
-              <div>
-                <div class = "score_inc_btn" id="inc_score_p1">+</div>
+              <div class="set_score_box">
+                <div class="score_player_label">Steve</div>
               </div>
-            </div>
-          </div>
 
-          <div class="score_column" id="score_column_player2">
+              <!--
+              <div class="set_score_box">
+                <div class="set_score_displayed">3</div>
+              </div>
 
-            <div class="set_score_box">
-              <div class="score_player_label">( blah )</div>
-            </div>
+              <div class="set_score_box">
+                <div class="set_score_displayed">6</div>
+              </div>
+              -->
 
-            <!--
-            <div class="set_score_box">
-              <div class="set_score_displayed">6</div>
-            </div>
-
-            <div class="set_score_box">
-              <div class="set_score_displayed">5</div>
-            </div>
-            -->
-
-            <div class="score_controller_container">
-              <div class = "score_num" id ="score_p2">0</div>
-              <div>
-                <div class = "score_inc_btn" id="inc_score_p2">+</div>
+              <div class="score_controller_container">
+                <div class = "score_num" id ="score_p1">0</div>
+                <div>
+                  <div class = "score_inc_btn" id="inc_score_p1">+</div>
+                </div>
               </div>
             </div>
 
+            <div class="score_column" id="score_column_player2">
+
+              <div class="set_score_box">
+                <div class="score_player_label">( blah )</div>
+              </div>
+
+              <!--
+              <div class="set_score_box">
+                <div class="set_score_displayed">6</div>
+              </div>
+
+              <div class="set_score_box">
+                <div class="set_score_displayed">5</div>
+              </div>
+              -->
+
+              <div class="score_controller_container">
+                <div class = "score_num" id ="score_p2">0</div>
+                <div>
+                  <div class = "score_inc_btn" id="inc_score_p2">+</div>
+                </div>
+              </div>
+
+            </div>
           </div>
+          <div id="score_undo">Undo Score</div>
         </div>
-        <div id="score_undo">Undo Score</div>
+        <!-- /Scores -->
       </div>
-      <!-- /Scores -->
-
+      
       <!-- Logging Toolbar -->
       <div id="logging-toolbar">
   	    <input type="button" class="toolbar-button borderless" id="forehand-button" value="(F)orehand">
